adding first website

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         </title>
         <style>
             body {
-                background: #867c4e;
+                background: #5c4715;
                 color: rgb(45, 45, 45);
                 padding: 10px;
                 font-family: arial;
@@ -18,7 +18,7 @@
          
             /* navigation menu */
             nav {
-                background: #d3ac81;
+                background: #866a44;
                margin: 0 auto;
                 display: flex;
                 padding: 10px;
@@ -44,7 +44,7 @@
          
             /* main container area beneath menu */
             main {
-                background: rgb(245, 238, 219);
+                background: rgb(156, 134, 71);
                 display: flex;
             }
             .sidebar {
@@ -93,7 +93,7 @@
                 <main>
                     <!-- Sidebar section -->
                     <div>
-                    <img src="https://cdn.discordapp.com/attachments/792234807001350144/1009094155370250352/IMG_4538.jpg" width="250" >
+                    <img src="/images/IMG_4538.JPG" width="150" >
                     </div>
 
                     <!-- Content section -->
