--- a/index.html
+++ b/index.html
@@ -76,44 +76,49 @@
                     <div id="all-contents">
                         ...
                     </div>
-                 </body>
+                </body>
                 <nav>
                     <h1>
                         Diamonds Introduction
-                    <ul>
-                        <li>
-                            <a href="index.html"> Home </a>
-                        </li
-                        <li>
-                            <a href="portfolio.html"> Portfolio </a>
-                        </li>
+                    </h1>
+                    <ul id="nav-ul">
+                            <li class="nav-li">
+                                <a href="index.html">
+                                    Home 
+                                </a>
+                            </li>
+                            <li class="nav-li">
+                                <a href="portfolio.html"> 
+                                    Portfolio 
+                                </a>
+                            </li>
                     </ul>
                 </nav>
-
+            </div>
                 <main>
                     <!-- Sidebar section -->
                     <div>
                     <img src="/images/IMG_4538.JPG" width="150" >
                     </div>
-
-                    <!-- Content section -->
                     <div>
-                        <h2>
+                    <!-- Content section -->
+                        <div>
+                            <h2>
                             Diamond Scott
-                        </h2>
+                            </h2>
 
-                        <p>
+                            <p>
                             I am currently a Student in Highshool
-                        </p>
-
+                            </p>
+                        </div>
                         <!--- Interest Section -->
                         <div>
                             <h3>Interests</h3>
-                            <ul>
-                                <li>Music</li>
-                                <li>Dancing</li>
-                                <li>Kpop</li>
-                            </ul>
+                        <ul>
+                            <li>Music</li>
+                            <li>Dancing</li>
+                            <li>Kpop</li>
+                        </ul>
                         </div>
                     </div>
                 </main>
