--- a/portfolio.html
+++ b/portfolio.html
@@ -64,14 +64,14 @@
              }
 
             #portfolio li {
-             background: #fff;
+             background: rgb(255, 255, 255);
              padding: 10px;
              border-radius: 10px;
              margin-bottom: 10px;
              }
 
              #portfolio li:hover {
-             background: #eee;
+             background: rgb(161, 145, 87);
             }
 
             #portfolio a {
@@ -89,24 +89,24 @@
     </head>
 
     <body>
-      <div id="all-contents">
+        <div id="all-contents">
         <nav>
             <h1>Diamonds Introduction</h1>
             <ul id="nav-ul">
-               <li class="nav-li">
-               <a 
-               class="nav-a" href="index.html">Home
-               </a>
-             </li>
-             <li class="nav-li">
-               <a 
-               class="nav-a" href="portfolio.html">Portfolio
-               </a>
-             </li>
-         </ul>
+                <li class="nav-li">
+                    <a href="index.html">
+                        Home
+                    </a>
+                </li>
+                <li class="nav-li">
+                    <a href="portfolio.html">
+                        Portfolio
+                    </a>
+                </li>
+            </ul>
         </nav>
         <main>
-            <div class="content"></div>
+            <div class="content">
                 <h1>
                     Portfolio
                 </h1>
@@ -121,6 +121,7 @@
                         href="projects/circularity/">Circularity : A motion poem using random number generation and velocity applied to circle shapes...
                     </a></li>
                 </ul>
+            </div>
         </main>
       </div>
     </body>
