--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -8,13 +8,13 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: teal;
+			background-color: rgb(242, 12, 227);
 			font-size: 300%;
 			text-align: center;
-			display: block;
+			display:block;
 			position: absolute;
 			top: 100px;
-			left: 0px;  /* <--- Change me! */
+			left: 200px;  /* <--- Change me! */
 		}
 		.board{
 			height: 100vh;
@@ -47,9 +47,10 @@
 			box.on('click', handleBoxClick);
 
 			// moves the Box to a new position on the screen along the X-Axis
-			function moveBoxTo(newPositionX) {
-				box.css("left", newPositionX);
-			}
+			function moveBoxTo(newPositionX, newPositionY) {
+     		box.css("left", newPositionX);
+			box.css("top", newPositionY);
+  			}
 
 			// changes the text displayed on the Box
 			function changeBoxText(newText) {
@@ -62,26 +63,76 @@
 			
 			// TODO 2 - Variable declarations 
 			
+			var positionX = 50;
 
+			var points = 0;
+
+			var speed = 10; 
+
+			var boardWidth = 800;
+
+			var positionY = 50;
 			
+			var speedY = 10;
+
+			var boardHeight = jQuery(window).height(200); 
+
+			var boardWidthY = 650;
+
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
-			turn it around! 
+			turn it around! 	
 			*/
+
 			function update() {
-				
+
+		// we want to update the position by 10 //
+
+			positionX = positionX + speed;
+
+			moveBoxTo(positionX, positionY);
+
+			if (positionX > boardWidth){
+				speed = speed * -1;
+			};
+
+			if (positionX <= 0){
+				speed = speed * -1;
+			};
+
+			positionY = positionY + speed;
+
+			moveBoxTo(positionY);
+
+			if (positionY > boardWidthY){
+			speed = speed * -1;
+			};
+
+			if (positionY <= 0){
+			speed = speed * -1;
+			};
 
 			};
+
+		
+
 
 			/* 
 			This Function will be called each time the box is clicked. Each time it is called,
 			it should increase the points total, increase the speed, and move the box to
 			the left side of the screen.
 			*/
-			function handleBoxClick() {
-				
 
+			function handleBoxClick() {
+
+			points = points + 1;
+
+			speed = speed + 3;
+
+			positionX = 0;
+
+			changeBoxText(points);
 
 			};
 		})();
