--- a/datDog/index.html
+++ b/datDog/index.html
@@ -4,6 +4,7 @@
             <title>
                 Dat Dog New Orleans
             </title>
+            <link rel="datDog" href="datDog.css">
             <style>
                 h1 {
                 text-align: center;
@@ -13,33 +14,49 @@
                  margin-left: auto;
                 margin-right: auto;
                 }
+                body {
+                background-color: rgb(201, 167, 95);
+                }
+                div {
+                 word-wrap: normal;
+                }
+                p.solid {border-style: solid;}
+
 
             </style>
+
         </head>
 
         <body>
             <nav>
+
                 <div class="topnav-centered">
                     <a href="www.datdog.com">
                        Website
                     </a>
                 </div>
+
                 <div class="topnav-centered">
                     <a href=" www.datdog.com">
                       Menu
                     </a>
                 </div>
+
             </nav>
 
             <main>
-                <img src="Images/logo.jpg" width="150" class="center">
-                <hr>
+                <img src="Images/logo.jpg" width="150" class="center"> 
             </main>
+
             <h1>
                 Dat Dogs New Orleans   
             </h1>
+
+            <hr>
+
             <table>
                 <th>
+
                     <p>
                         Does the idea of a hot dog put a smile on your face? Does it remind you of happy times at a
                         picnic, a ballpark, or on vacation? could an Irish Guinness sausage with andouille sauce,
@@ -58,14 +75,20 @@
                     </p>
                      
                     <div class="row">
+
                         <div class="column" style="">
+
                             <img src="Images/Location1.webp" width="350">
+
                         <div class="column" style="">
+
                             <p> 
                                  3336 Magazine St, New Orleans, LA 70115
                             </p>
+                    </div>
+
                 </th>
             </table>
-  
+
         </body>
     </html>
