--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -38,7 +38,7 @@
 			
 			var box = jQuery('.box');	// reference to the HTML .box element
 			var board = jQuery('.board');	// reference to the HTML .board element
-			var boardWidth = board.width();	// the maximum X-Coordinate of the screen
+			var boardWidth = board.width(100);	// the maximum X-Coordinate of the screen
 
 			// Every 50 milliseconds, call the update Function (see below)
 			setInterval(update, 50);
@@ -71,11 +71,11 @@
 
 			var boardWidth = 800;
 
-			var positionY = 50;
+			var positionY = 70;
 			
-			var speedY = 10;
+			var speedY = 20;
 
-			var boardHeight = jQuery(window).height(200); 
+			var boardHeight = 100; 
 
 			var boardWidthY = 650;
 
@@ -105,7 +105,7 @@
 
 			moveBoxTo(positionY);
 
-			if (positionY > boardWidthY){
+			if (positionY > boardheight){
 			speed = speed * -1;
 			};
 
