--- a/datDog/index.html
+++ b/datDog/index.html
@@ -8,17 +8,19 @@
 
             <nav id="topNav">
 
-                <div class="topnav-centered" id="datDog">
+                <div class="center" id="datDog">
                     <a href="www.datdog.com">
                        Website
                     </a>
                 </div>
 
-                <div class="topnav-centered" id="datMenu">
+                <div class="center" id="datMenu">
                     <a href=" www.datdog.com">
                       Menu
                     </a>
                 </div>
+
+            </ul>
 
             </nav>
 
