--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -38,7 +38,8 @@
 			
 			var box = jQuery('.box');	// reference to the HTML .box element
 			var board = jQuery('.board');	// reference to the HTML .board element
-			var boardWidth = board.width(100);	// the maximum X-Coordinate of the screen
+			var boardWidth = board.width();	// the maximum X-Coordinate of the screen
+			var boardHeight = board.height();
 
 			// Every 50 milliseconds, call the update Function (see below)
 			setInterval(update, 50);
@@ -64,23 +65,15 @@
 			
 			// TODO 2 - Variable declarations 
 			
-			var positionX = 50;
+			var positionX = 0;
 
 			var points = 0;
 
 			var speed = 10; 
 
-			var boardWidth = 800;
-
 			var positionY = 70;
 			
-			var speedY = 20;
-
-			var boardHeight = 100; 
-
-			var boardWidthY = 650;
-
-			var randNum = Math.random() * 100;
+			var speedY = 8;
 
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
@@ -93,10 +86,10 @@
 		// we want to update the position by 10 //
 
 			positionX = positionX + speed;
-
+			
 			moveBoxTo(positionX, positionY);
 
-			if (positionX > boardWidth){
+			if (positionX >= boardWidth){
 				speed = speed * -1;
 			};
 
@@ -104,14 +97,14 @@
 				speed = speed * -1;
 			};
 
-			positionY = positionY + speed;
+			positionY = positionY + speedY;
 
-			if (positionY > boardHeight){
-				speed = speed * +1;
+			if (positionY >= boardHeight){
+				speedY = speedY * -1;
 			};
 
 			if (positionY <= 0){
-				speed = speed * +1;
+				speedY = speedY * -1;
 			};
 			
 			};
