--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -15,9 +15,12 @@
 			position: absolute;
 			top: 100px;
 			left: 200px;  /* <--- Change me! */
+			background-image:url("images/cat.png");
+			background-position: center;
 		}
 		.board{
 			height: 100vh;
+			background-image:url("images/background.png");
 		}
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
@@ -26,7 +29,6 @@
 <body class="board">
 	<!-- HTML for the box -->
 	<div class="box">?</div>
-
 	<script>
 		(function(){
 			'use strict'
@@ -58,7 +60,6 @@
 				box.text(newText);
 			}
 
-
 			//////////////////////////////////////////////////////////////////
 			/////////////////// YOUR CODE BELOW HERE /////////////////////////
 			//////////////////////////////////////////////////////////////////
@@ -86,31 +87,28 @@
 		// we want to update the position by 10 //
 
 			positionX = positionX + speed;
-			
+
+			positionY = positionY + speedY;
+
 			moveBoxTo(positionX, positionY);
 
 			if (positionX >= boardWidth){
 				speed = speed * -1;
-			};
+			}
 
 			if (positionX <= 0){
 				speed = speed * -1;
-			};
-
-			positionY = positionY + speedY;
+			}
 
 			if (positionY >= boardHeight){
 				speedY = speedY * -1;
-			};
+			}
 
 			if (positionY <= 0){
 				speedY = speedY * -1;
-			};
+			}
 			
 			};
-
-		
-
 
 			/* 
 			This Function will be called each time the box is clicked. Each time it is called,
@@ -124,13 +122,11 @@
 
 			speed = speed + 2;
 
-			positionX = 0;
+			positionX = 0
 
-			positionY = 0;
+			positionY = 0
 
 			changeBoxText(points);
-
-			
 
 			};
 
