--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -19,7 +19,8 @@
 		}
 		.board{
 			height: 100vh;
-			background-image:url("images/background.png");
+			background-image:url("images/background2.png");
+			background-image: center;
 		}
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
