--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -96,7 +96,7 @@
 				speed = speed * -1;
 			}
 
-			if (positionX <= 0){
+			if (positionX < 0){
 				speed = speed * -1;
 			}
 
@@ -104,7 +104,7 @@
 				speedY = speedY * -1;
 			}
 
-			if (positionY <= 0){
+			if (positionY < 0){
 				speedY = speedY * -1;
 			}
 			
